--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   tutorial_coach_mark: ^1.2.11
   lottie: ^3.0.0
+  google_fonts:
 
 dev_dependencies:
   flutter_test:
